--- a/_posts/2019-06-25-test.md
+++ b/_posts/2019-06-25-test.md
@@ -9,3 +9,14 @@ subtitle: 'this is a test document'
 
 ---
 
+这是一篇测试文档，这张图我很喜欢。
+
+# 一级标题
+
+火箭发射！
+
+![rocket.dribbble_1x](/Users/baishi/Pictures/小图/静态图片/rocket.dribbble_1x.jpg)
+
+## 二级标题
+
+啦啦啦
