--- a/_posts/2019-06-25-test.md
+++ b/_posts/2019-06-25-test.md
@@ -9,13 +9,13 @@ subtitle: 'this is a test document'
 
 ---
 
-这是一篇测试文档，这张图我很喜欢。
+这是一篇测试文档。
 
 # 一级标题
 
-火箭发射！
+超级厉害的羊驼先生。
 
-![rocket.dribbble_1x](/Users/baishi/Pictures/小图/静态图片/rocket.dribbble_1x.jpg)
+![羊驼](../assets/pictures/003.png)
 
 ## 二级标题
 
