--- a/_posts/2019-06-25-test.md
+++ b/_posts/2019-06-25-test.md
@@ -4,7 +4,7 @@ title:  "第一篇测试文档"
 date:   2019-06-25 20:48:21 +0800
 tags: 测试
 color: rgb(255,90,90)
-cover: '../assets/pictures/Hedgehog.gif'
+cover: '/assets/pictures/Hedgehog.gif'
 subtitle: 'this is a test document'
 
 ---
@@ -15,7 +15,7 @@ subtitle: 'this is a test document'
 
 超级厉害的羊驼先生。
 
-![羊驼](../assets/pictures/003.png)
+![羊驼](/assets/pictures/003.png)
 
 ## 二级标题
 
